fix alignment glitch on the project dasboard

--- a/server/sonar-web/src/main/js/apps/overview/styles.css
+++ b/server/sonar-web/src/main/js/apps/overview/styles.css
@@ -298,7 +298,7 @@
 
 .overview-deprecated-rules {
   margin: 4px -6px 4px;
-  padding: 3px 6px;
+  padding: 3px 6px !important;
   border: 1px solid #ebccd1;
   border-radius: 3px;
   background-color: #f2dede;
